# Pasta

./: LICENSE  README.md  TODO.md
doc/: myscript.md  parsing_errors.md  pasta-lang.md  pasta.md  runtime-errors.md  trace_cps_facc_4.txt
doc/exmaples/: linkedlist.pas
pastac/src/: lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parser.output  pastac  pastac.ml
pastac/src/example/: caseof.pas  linkedlist.pas  try  try.pas
pastac/test/examples/: 1.a-empty-body.pas  for-loop.pas  helloworld.pas  implicit-dconvert.pas  integer-example.pas  linkedlist.pas
pastac/test/testlexer/: lexer.ml  lexer.mll  test  test.ml
pastavm/: CMakeLists.txt  rm  t.txt
pastavm/lib/: CMakeLists.txt
pastavm/lib/check/: libcheck.la  libcheck.so.0.0.0
pastavm/lib/cjson/: CMakeLists.txt
pastavm/src/: .heap.c.swp  .heap.h.swp  .vm.c.swp  .vm.h.swp  2  CMakeLists.txt  errlog.h  heap.c  heap.h  instr.h  main.c  positions.h  rawcode.c  rawcode.h  vm.c  vm.h
pastavm/test/: .test.c.swp  .test_rawcode_gen.c.swp  CMakeLists.txt  check_stdint.h  helper.c  test.c  test_ins.c  test_rawcode_gen.c  testhelper.c  testhelper.h
src/: .ast.ml.swo  .ast.ml.swp  ast.ml  cpyacc.sh  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parser.output  pastac  pastalex.ml  pastalex.mll
src/example/: linkedlist.pas  try.pas
test/: system test.md
test/examples/: boolean-example.pas  character-example.pas  helloworld.pas  implicit-dconvert-2.pas  real-example.pas  string-example.pas
test/testlexer/: parser.ml
